# epaper-backend

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  config  run.sh  wrapper.h
configs/: defaultconfig
src/: main.rs  terminal.rs  xorg.rs
src/IT8951/: Image.rs  mod.rs
webserver/: Cargo.toml  Rocket.toml  config.json
webserver/src/: main.rs
