[package]
name = "rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11="2.20.0"
libc = "0.2"
termion = "2.0.1"
#rocket = "0.5.0-rc.2"
home = "0.5.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.61"
cmake = "0.1"

#epaper

[features]
default = ["xrandr","xlib"]
all = ["dpms", 
        "glx", 
        "xcursor", 
        "xf86vmode", 
        "xft", 
        "xinerama", 
        "xinput", 
        "xlib", 
        "xlib_xcb", 
        "xmu", 
        "xrandr", 
        "xrecord",
        "xrender", 
        "xss", 
        "xt", 
        "xtest", 
        "xtst", 
        "dox"]
dpms = []
glx = []
xcursor = []
xf86vmode = []
xft = []
xinerama = []
xinput = []
xlib = []
xlib_xcb = []
xmu = []
xrandr = []
xrecord = ["xtst"]
xrender = []
xss = []
xt = []
xtest = ["xtst"]
xtst = []
dox = [] 
